@startuml

title __RENDERER's Class Diagram__\n

  namespace com.apetrei.engine {
    namespace renderer {
      class com.apetrei.engine.renderer.Camera {
          + getCameraPosition()
          + getMousePozInWorld()
          + placeCameraAt()
          + setCameraPosition()
          + vector2CameraSpace()
          + vector2CameraSpace()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace renderer {
      class com.apetrei.engine.renderer.ImageLoader {
          {static} ~ spriteMap : HashMap<String, BufferedImage>
          {static} - folder : File
          {static} - imageLoader : ImageLoader
          {static} + getInstance()
          + getSprite()
          + listFilesForFolder()
          - ImageLoader()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace renderer {
      class com.apetrei.engine.renderer.LayerRenderer {
          ~ graphics : Graphics
          + drawLine()
          + drawLine()
          + drawPoligon()
          + drawRectangle()
          + drawRectangle()
          + drawSprite()
          + drawSprite()
          + drawSprite()
          + drawStaticSprite()
          {static} + rotate()
          + setGraphics()
          ~ LayerRenderer()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace renderer {
      class com.apetrei.engine.renderer.Renderer {
          ~ HUDLayer : BufferedImage
          ~ gameFrame : BufferedImage
          ~ graphicsBuffer : Graphics
          - graphics : Graphics
          + PrepareRender()
          + Render()
          + Renderer()
          + getCamera()
          + getLayerRenderer()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace renderer {
      class com.apetrei.engine.renderer.Window {
          - bufferStrategy : BufferStrategy
          - canvas : Canvas
          - frame : JFrame
          + Window()
          + close()
          + getBufferStrategy()
          + getCanvas()
          + getFrame()
      }
    }
  }
  

  com.apetrei.engine.renderer.Camera o-- com.apetrei.misc.Vector2 : cameraPosition
  com.apetrei.engine.renderer.LayerRenderer o-- com.apetrei.engine.renderer.Camera : camera
  com.apetrei.engine.renderer.Renderer o-- com.apetrei.engine.renderer.Camera : camera
  com.apetrei.engine.renderer.Renderer o-- com.apetrei.engine.GameContainer : gameContainer
  com.apetrei.engine.renderer.Renderer o-- com.apetrei.engine.renderer.LayerRenderer : layerRenderer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
